# ds210-sp26-a1-code

discussion_2_git/src/: main.rs
discussion_7_pointer/: Cargo.toml
discussion_7_pointer/src/: example1.rs  example2.rs  example3.rs
homework_3_guessing_game/src/: part1.rs  part2.rs  part3.rs
project_1_vector/fast_vec/src/: lib.rs
project_1_vector/slow_vec/src/: lib.rs  main.rs
project_2_chatbot/: Cargo.toml
project_2_chatbot/basic_chatbot/: Cargo.toml
project_2_chatbot/basic_chatbot/html/: index.html
project_2_chatbot/basic_chatbot/src/: main.rs
project_2_chatbot/basic_chatbot/src/solution/: v1.rs  v2.rs  v3.rs
project_2_chatbot/basic_chatbot/src/stencil/: adapter.rs  llama_model.rs  webserver.rs
project_2_chatbot/cache_chatbot/: Cargo.toml
project_2_chatbot/cache_chatbot/html/: index.html
project_2_chatbot/cache_chatbot/src/: lib.rs  main.rs
project_2_chatbot/cache_chatbot/src/solution/: fast_cache.rs  mod.rs  slow_cache.rs  v5.rs
project_2_chatbot/cache_chatbot/src/stencil/: adapter.rs  endpoints.rs
project_2_chatbot/cache_chatbot/tests/: cache.rs
project_2_chatbot/experiments/: Cargo.toml
project_2_chatbot/experiments/src/: experiment1.rs  experiment2.rs  experiment3.rs  lib.rs
project_2_chatbot/file_chatbot/: Cargo.toml
project_2_chatbot/file_chatbot/src/: main.rs
project_2_chatbot/file_chatbot/src/solution/: file_library.rs  mod.rs  v4.rs
project_2_chatbot/file_chatbot/src/stencil/: adapter.rs  endpoints.rs  mod.rs
