[package]
name = "experiments"
version = "0.1.0"
edition = "2024"

[lib]
name = "experiments"
path = "src/lib.rs"

[[bin]]
name = "experiment1"
path = "src/experiment1.rs"

[[bin]]
name = "experiment2"
path = "src/experiment2.rs"

[[bin]]
name = "experiment3"
path = "src/experiment3.rs"

[dependencies]
basic_chatbot = { path = "../basic_chatbot", features = [ "v3" ] }
file_chatbot = { path = "../file_chatbot" }
cache_chatbot = { path = "../cache_chatbot" }
rocket = {  version = "0.5.1", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.50.0" }